GUI for betting